# markov_solver

./: markov_solver.py  pyproject.toml
