[project]
name = "markov-solver"
version = "0.1.0"
description = ""
authors = [
    {name = "Ganesh Nayanajith",email = "ganeshnayanajith40@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sympy (>=1.13.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
